--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     }
 </style>
 <body>
+    <h2>缩放浏览器宽度可以看到不同的效果</h2>
     <p>默认设置 p{margin: 30px;font-size: 20px;margin-bottom:40px;}</p>
     <p>min-width:1280px ：p{margin: 30px;font-size: 14px;}</p>
     <p>min-width:1440px ：p{margin: 20px;font-size: 16px;}</p>
